--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>chapter6</module>
         <module>chapter9</module>
         <module>chapter10</module>
+        <module>chapter11</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
