--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>chapter9</module>
         <module>chapter10</module>
         <module>chapter11</module>
+        <module>chapter12</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
