--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>chapter10</module>
         <module>chapter11</module>
         <module>chapter12</module>
+        <module>chapter13</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
